<resources>
    <string name="app_name">Colleges In Nepal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="notice_board">Notice Board</string>
    <string name="programs">Programs</string>
    <string name="senderId">110063907867</string>
    <string name="serverKey">AIzaSyCtAhaUW0-XdFJYA2FdnM1bf2fZQASX6_I</string>
    <string name="action_settings">Settings</string>
    <string name="togetherToday">Together Today for a</string>
    <string name="sucessfulTomorrow"><color name="#ff9900">Successful</color> <color name="#ffb84d">Tomorrow</color></string>
    <string name="messageChairman">Dear Perspective Students\n\n
        I would like to take an opportunity to express my immense pleasure to welcome you all to the premises of Cosmos College of Management and Technology. From this academic session college activities will be conducted under active and effortful involvement of new management team consisting renowned personalities from the field of engineering and management education having dynamic thought and concept.

        Thanking you\n\n
        Er. Ldsfl\n\n</string>
    <string name="applicationProcedure">Application Procedure</string>
    <string name="eligibility">Eligibility for Admission</string>
    <string name="forBE">For BE: 10 + 2 or Pro ciency Certi cate in Science (Physical or Biological group) or Diploma in Engineering or equivalent.</string>
    <string name="selectionProcedure">Selection Procedure</string>
    <string name="conditions">Candidates fulfilling the stated entry qualifications are required to pass a pre-admission test in order to be considered for selection. The selection will be based on students\' performance in the qualifying examination (10 + 2 or equivalent) and in the pre-admission test.</string>
    <string name="scholarship">Scholarship</string>
    <string name="scholarshipText" formatted="false">There are three categories of scholarships available in Cosmos College.\n\n
        <b>1.</b> Full Scholarship: This covers 100% of all university and college fees. The number of scholarships available in each programme is nearly 5% of the approved number of seats in the programme. The selection for this category of scholarship is administered by Pokhara University.\n\n
        <b>2.</b> Limited scholarship as percentage of semester and tuition fees is awarded by the college at the time of admission on the basis of\n\n
            • Merit (performance in qualifying examination and pre-admission test) up to 50%.\n\n
            • Additional scholarship for students belonging to the category of female dalit under privileged areas.\n\n
        <b>3.</b> In every semester, high ranking students are awarded scholarship amount as percentage of semester and tuition fees based on performance in the previous semester.\n\n
            <b>a)</b> In each programme of each intake year, the topper, the second and the third ranking students are awarded 100%, 50% and 25% scholarship respectively.\n\n
            <b>b)</b> Female college toppers amongst all students of all programmes of all intake years (one in every 48 female students) are awarded 100% scholarship.\n\n
        If the students in concern obtain the same SGPA, the scholarship amount is shared.\n\n
        If a student is eligible for two or more kinds of scholarship in a semester, the student will receive the one with a higher value as far as that semester is concerned.</string>
    <string name="erProgrammes">Bachelor of Engineering Programmes</string>
    <string name="erProgrammesText">The Engineering programmes in Cosmos provide an excellent all-round technical education with emphasis on practical studies. An engineering graduate will be able to apply analytical and problem-solving skills in resolving technical problems and issues, and incorporate technology in day-to-day life, to facilitate growth and development.</string>
    <string name="projectWorks">Project Works</string>
    <string name="elective">Elective Courses</string>
    <string name="projectWorksText">\nProject work is an integral part of engineering curriculum. These projects are supervised by senior faculty members and to the extent possible by resource persons working in the industry.\n\n
        Some of the recent projects taken up by engineering students are:\n\n
        • Target Detection and Simulation through Radar \n
        • Remote Input Droid System \n
        • College Search Android Apps \n
        • Phone Diary Android App \n
        • Notice Board App \n
        • Android App \n
        • Kissan Android app \n
        • Blood Member \n
        • Target Detection and Stimulation through Radar \n
        • Electronic CDMA Network Design &amp; Stimulation \n
        • Cell Phone Operated Land Rover \n
        • Solar Panel Clean up (RF Implemented Tech.) \n
        • License Plate Recognition System \n
        • Online Games \n
        • Analysis and Design of Multistory Building></string>
    <string name="electiveText">\nWith  exibility in course registration, the curriculum is oriented to provide intensive study in the  eld of personal interest. Some of the elective courses offered in the previous years are: \n\n
        • Data Mining and Warehousing \n
        • Net Technologies \n
        • Advanced Java \n
        • Oracle \n
        • Aeronautical \n
        • Telecommunication \n
        • Optical Fiber \n
        • Structural Dynamics \n
        • Hydropower Planning \n
        • Environmental Impact Assessment \n
        • Rock Mechanics \n
        • GIS \n
        • Satellite Communication</string>
    <string name="facultyIT">Bachelor of Engineering in Information Technology</string>
    <string name="textIT">The BE Information Technology programme has been developed to produce highly skilled and quali ed engineers and professionals related to Information Technology - with expertise on analysis, design and development of information systems and technology, in tune with the modern day requirements.</string>
    <string name="itFirst">&#160;Engineering Mathematics I\n
        Physics\n
        Communication Techniques\n
        Problem Solving Techniques\n
        Basic Electrical Engineering\n
        Programming in C </string>
    <string name="itSecond">&#160;Engineering Mathematics II\n
        Network Theory\n
        Mathematical Foundation of Computer  &#160;Science\n
        Electronics Devices\n
        Engineering Drawing\n
        Object Oriented Programming in C ++</string>
    <string name="itThird">&#160;Engineering Mathematics III \n
        Logic Circuits \n
        Data Structure and Algorithms \n
        Probability and Queuing Theory \n
        Web Technology \n
        Electronic Circuits and Instrumentation</string>
    <string name="itFourth">&#160;Engineering Mathematics IV \n
        Microprocessor &amp; Assembly Language &#160;Prog.\n
        Programming in JAVA \n
        Database Management Systems \n
        Software Engineering Fundamentals \n
        Project I</string>
    <string name="itFifth">&#160;Applied Operating Systems \n
        Numerical Methods \n
        Computer Organization &amp; Architecture \n
        Organization and Management \n
        Signal System and Processing \n
        Principles of Communication</string>
    <string name="itSixth">&#160;Computer Graphics \n
        Computer Network \n
        Intelligent Systems \n
        Information Systems \n
        Object Oriented Design &amp; Modeling through &#160;UML \n
        Project II</string>
    <string name="itSeventh">&#160;Multimedia Systems \n
        ICT Project Management \n
        Business Process and IT Strategy \n
        Network Programming \n
        Telecommunications \n
        Elective I</string>
    <string name="itEighth">&#160;Mobile and Wireless Communications \n
        Engineering Economics \n
        Social and Professional Issues in IT \n
        Elective II \n
        Project III (Final Project)</string>
    <string name="bceFaculty">Bachelor in Computer Engineering</string>
    <string name="textBce">The BE Computer programme provides students with knowledge and skills in hardware and software required for the analysis, design and development of Computer and Information Systems that are demanded by the modern day society and industry.</string>
    <string name="bceFirst">&#160;Engineering Mathematics I\n
        Chemistry\n
        Communication Techniques\n
        Programming in C\n
        Basic Electrical Engineering\n
        Mechanical Workshop</string>
    <string name="bceSecond">&#160;Engineering Mathematics II\n
        Physics\n
        Engineering Drawing\n
        Object Oriented Programming in C ++\n
        Thermal Science\n
        Applied Mechanics I</string>
    <string name="bceThird">&#160;Engineering Mathematics III\n
        Data Structure and Algorithms\n
        Electrical Engineering Materials\n
        Network Theory\n
        Electronics Devices and Circuits\n
        Logic Circuits</string>
    <string name="bceFourth">&#160;Engineering Mathematics IV\n
        Instrumentation\n
        Database Management System\n
        Programming Technology\n
        Microprocessors\n
        Project I</string>
    <string name="bceFifth">&#160;Numerical Methods\n
        Probability and Statistics\n
        Operating Systems\n
        Computer Architecture\n
        Computer Graphics\n
        Theory of Computation</string>
    <string name="bceSixth">&#160;Simulation &amp; Modeling\n
        Data Communications\n
        Object Oriented Software Engineering\n
        Embedded Systems\n
        Elective I\n
        Project II (Minor Project)</string>
    <string name="bceSeventh">&#160;Engineering Economics\n
        Image Processing &amp; Pattern &#160;Recognition\n
        Artificial Intelligence\n
        Computer Network\n
        ICT Project Management\n
        Elective II (Minor Project)</string>
    <string name="multitudeOptions">Multitude of Options ...</string>
    <string name="evaluationText" formatted="false">The internal evaluation of the theory component of each course is made by continuous evaluation which includes term tests, tutorials and assignments. Consistency in attendance is given due consideration.
        Final grade is awarded by the university in each subject in each semester by providing a weight of 50% each to the internal evaluation (administered by the college) and 50% to the semester-end examination
        (conducted by the university) after due process of relative grading. However, courses that are fully practical in nature are mostly subjected to internal evaluation only. Semester-end examinations of elective
        subjects are conducted by respective colleges.</string>
    <string name="teachingMethodology">Teaching methods at the college are modern and result- oriented. It includes lectures, tutorial works, group discussions, presentations, laboratory works, and computer-aided learning.</string>
    <string name="facultyandRes">COSMOS has a blend of dynamic youth and strong team of faculty and resource persons comprising of eminent teachers and professionals reputed in their respective field.</string>
    <string name="councelingText">COSMOS has the tradition of counseling every student individually each semester regarding his/her academic performance. Personal problems, if any, are also dealt with.</string>
    <string name="guestLectures">Apart from regular classes Cosmos invites reputed personalities as guest lecturers and guest speakers from the  elds of management and technology to impart expert knowledge on their related field.</string>
</resources>